--- a/tools/index.html
+++ b/tools/index.html
@@ -45,7 +45,7 @@
     .rule-info .desc { font-size: 0.85rem; color: #666; margin-top: 4px; }
     
     .export-section { position: sticky; top: 20px; }
-    .format-selector { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 20px; }
+    .format-selector { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; margin-bottom: 20px; }
     .format-btn { padding: 12px 8px; border: 2px solid #e0e0e0; border-radius: 8px; background: white; cursor: pointer; transition: all 0.2s; text-align: center; }
     .format-btn:hover { border-color: #667eea; }
     .format-btn.selected { border-color: #667eea; background: #f0f0ff; }
@@ -112,6 +112,10 @@
           <button class="format-btn" data-format="windsurf" onclick="selectFormat('windsurf')">
             <span class="icon">🏄</span>
             <span class="name">Windsurf</span>
+          </button>
+          <button class="format-btn" data-format="antigravity" onclick="selectFormat('antigravity')">
+            <span class="icon">🪐</span>
+            <span class="name">Antigravity</span>
           </button>
           <button class="format-btn" data-format="markdown" onclick="selectFormat('markdown')">
             <span class="icon">📄</span>
